fix: repository, controller, test, app